[package]
name = "escurel-runner-core"
description = "Harness-agnostic engine for the escurel agent runner: config, trigger lifecycle, dispatch queue, loop control."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1"
escurel-types = { path = "../escurel-types" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["sync"] }

[lints]
workspace = true
