[package]
name = "escurel-runner-harness"
description = "Harness-adapter trait and Claude Code / Codex / Google ADK adapters for the escurel agent runner."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]

[lints]
workspace = true
