[package]
name = "escurel-runner-workflow"
description = "Deterministic reducer for escurel dynamic workflows: plan spec, content-addressed step identity, and the barrier tally."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
escurel-types = { path = "../escurel-types" }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ulid = "1"

[lints]
workspace = true
