[package]
name = "escurel-server"
description = "HTTP gateway for Escurel: health, MCP-over-HTTP, WebSocket."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

# Library + the deployable server binary. `main.rs` reads the
# `ESCUREL_*` config surface from the environment (optionally over a
# TOML base file at `$ESCUREL_CONFIG`), builds the real backends, and
# calls `serve`.
[[bin]]
name = "escurel-server"
path = "src/main.rs"

[features]
# Default-on:
#   `kreuzberg` — PDF/DOCX/PPTX/XLSX uploads through /ingest work out of the
#     box (ELv2 + bundled pdfium; needs rust-version >= 1.91).
#   `gemini`    — the default embedder is hosted Gemini. The binary ships the
#     Gemini HTTP embedder, and the runtime provider default is `gemini`; with
#     no ESCUREL_GEMINI_API_KEY it falls back to ZeroEmbedder (a warning is
#     logged) so keyless dev/CI/air-gapped boots stay clean. Air-gapped
#     deployments should set ESCUREL_EMBEDDING_PROVIDER=embeddinggemma (local
#     candle) or `zero`.
# `--no-default-features` gives a light, offline, text-only build.
default = ["kreuzberg", "gemini"]
kreuzberg = ["escurel-index/kreuzberg"]
gemini = ["escurel-embed/gemini"]
# Opt-in backends. Off by default so the dev / test build stays light and the
# cold-compile cost of the AWS SDK / candle is only paid when selected.
#   --features s3             → S3-backed LaneStore (Hetzner OS / MinIO)
#   --features embeddinggemma → local candle EmbeddingGemma embedder (air-gap)
s3 = ["escurel-storage/s3"]
embeddinggemma = ["escurel-embed/candle"]
#   --features rerank        → candle XLM-RoBERTa cross-encoder reranker
#     (issue #215). Opt-in build (heavy candle compile + ~GB model at boot);
#     when built, the runtime default is rerank=bge ("default-on where built").
rerank = ["escurel-embed/rerank"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
dashmap = "6"
duckdb = { version = "1", default-features = false }
escurel-admin = { path = "../escurel-admin" }
escurel-auth = { path = "../escurel-auth" }
escurel-crdt = { path = "../escurel-crdt" }
escurel-embed = { path = "../escurel-embed" }
escurel-index = { path = "../escurel-index" }
escurel-md = { path = "../escurel-md" }
escurel-obs = { path = "../escurel-obs" }
escurel-quota = { path = "../escurel-quota" }
escurel-storage = { path = "../escurel-storage" }
escurel-types = { path = "../escurel-types" }
flate2 = "1"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs", "cors"] }
tracing = "0.1"
ulid = "1"

[dev-dependencies]
assert_cmd = "2"
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
duckdb = { version = "1", default-features = false }
escurel-admin = { path = "../escurel-admin" }
escurel-client = { path = "../escurel-client" }
escurel-crdt = { path = "../escurel-crdt" }
escurel-embed = { path = "../escurel-embed" }
escurel-index = { path = "../escurel-index" }
escurel-obs = { path = "../escurel-obs" }
escurel-storage = { path = "../escurel-storage" }
escurel-test-support = { path = "../escurel-test-support" }
futures = "0.3"
hmac = "0.12"
loro = "1.12"
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.24"
wiremock = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry"] }

[lints]
workspace = true
