[package]
name = "escurel-storage"
description = "Object storage abstraction for Escurel: LaneStore trait + filesystem impl."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = "0.1"
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "rt"] }
url = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
