[package]
name = "escurel-test-support"
description = "No-mock test harness: spawn a real Escurel gateway in-process for downstream integration tests."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
escurel-admin = { path = "../escurel-admin" }
escurel-auth = { path = "../escurel-auth" }
escurel-client = { path = "../escurel-client" }
escurel-crdt = { path = "../escurel-crdt" }
escurel-embed = { path = "../escurel-embed" }
escurel-index = { path = "../escurel-index" }
escurel-quota = { path = "../escurel-quota" }
escurel-server = { path = "../escurel-server" }
escurel-storage = { path = "../escurel-storage" }
base64 = "0.22"
bytes = "1"
duckdb = { version = "1", default-features = false }
jsonwebtoken = "9"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = { version = "0.9", features = ["pem"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "sync", "time"] }
wiremock = "0.6"

[lints]
workspace = true
