[package]
name = "escurel-tui"
description = "k9s-style interactive terminal UI for the Escurel gateway, built on escurel-client."
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = "1"
crossterm = "0.28"
ratatui = "0.29"
# escurel-tui talks to the gateway only through escurel-client (no
# hand-rolled transport, no direct wire-type dependency beyond the
# re-exported escurel-types).
escurel-client = { path = "../escurel-client" }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "io-std"] }
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
escurel-test-support = { path = "../escurel-test-support" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
